--- a/css/style.css
+++ b/css/style.css
@@ -16,12 +16,11 @@ body {
   height: 100vh;
   width: 100vw;
   background: linear-gradient(-45deg, #040505, #1c2e23, #194a2c, #318964);
-  background-size: 400% 400%;
+  background-size: 100% 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  animation: backgroundTransition 9s ease-in-out infinite;
   position: relative;
 }
 
@@ -52,69 +51,57 @@ h2 {
   transition: 0.3s cubic-bezier(0.55, 0.025, 0.675, 0.97);
 }
 a:hover {
-  color: #2E1C2B;
+  color: #ffffff;
   background-color: #707070;
-}
-
-@keyframes backgroundTransition {
-  0% {
-      background-position:  0% 75%;
-  }
-  50% {
-      background-position: 100% 75%;
-  }
-  100% {
-      background-position: 0% 95%;
-  }
 }
 
 /* MENU HAMBURGUER */
 
 .checkbox-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .checkbox {
-    height: 100px;
-    width: 100px;
-    position: absolute;
-    top: 0;
-    right: 0;
-    display: flex;
-    justify-content: center;
-    cursor: pointer;
-    z-index: 9999;
-    transition: 400ms ease-in-out 0s;
+  height: 100px;
+  width: 100px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+  z-index: 9999;
+  transition: 400ms ease-in-out 0s;
 }
 
 .checkbox .trace {
-    width: 50px;
-    height: 6px;
-    background-color: white;
-    position: absolute;
-    border-radius: 2px;
-    transition: 0.5s ease-in-out;
+  width: 50px;
+  height: 6px;
+  background-color: white;
+  position: absolute;
+  border-radius: 2px;
+  transition: 0.5s ease-in-out;
 }
 
 .checkbox .trace:nth-child(1) {
-    top: 36px;
-    transform: rotate(0);
+  top: 36px;
+  transform: rotate(0);
 }
 
 .checkbox .trace:nth-child(2) {
-    top: 51px;
-    transform: rotate(0);
+  top: 51px;
+  transform: rotate(0);
 }
 
 .checkbox .trace:nth-child(3) {
-    top: 66px;
-    transform: rotate(0);
+  top: 66px;
+  transform: rotate(0);
 }
 
 #toggle {
-    display: none;
+  display: none;
 }
 
 /* MENU */
@@ -167,130 +154,156 @@ a:hover {
 /* ANIMAÇÃO DO MENU */
 
 #toggle:checked + .checkbox .trace:nth-child(1) {
-    transform: rotate(45deg);
-    background-color: #2E1C2B;
-    top: 47px;
+  transform: rotate(45deg);
+  background-color: #2E1C2B;
+  top: 47px;
 }
 
 #toggle:checked + .checkbox .trace:nth-child(2) {
-    transform:  translateX(-100px);
-    width: 30px;
-    visibility: hidden;
-    opacity: 0;
+  transform:  translateX(-100px);
+  width: 30px;
+  visibility: hidden;
+  opacity: 0;
 }
 
 #toggle:checked + .checkbox .trace:nth-child(3) {
-    transform: rotate(-45deg);
-    background-color: #2E1C2B;
-    top: 48px;
+  transform: rotate(-45deg);
+  background-color: #2E1C2B;
+  top: 48px;
 }
 
 #toggle:checked + .checkbox {
-    background-color: #adadad;
+  background-color: #adadad;
 }
 
 #toggle:checked ~ .menu{
-    box-shadow: 0px 0px 0px 101vmax #adadad;
-    z-index: 1;
+  box-shadow: 0px 0px 0px 101vmax #adadad;
+  z-index: 1;
 }
 
 #toggle:checked ~ .menu-items{
-    visibility: visible;
-    opacity: 1;
+  visibility: visible;
+  opacity: 1;
 }
 
 /* CARDS */
 
 .container {
-    width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    margin: 3rem 0;
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 3rem 0;
 }
 
 .card-container {
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    width: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 90%;
 }
 
 .card {
-    height: 300px;
-    width: 400px;
-    margin: 3rem 0 0 0;
-    background-image: url('../img/room.png');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    filter: grayscale(0.5);
-    color: white;
-    cursor: pointer;
-    transition: 0.3s;
+  height: 300px;
+  width: 400px;
+  margin: 3rem 0 0 0;
+  background-image: url('../img/room.png');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  filter: grayscale(0.5);
+  color: white;
+  cursor: pointer;
+  transition: 0.3s;
 }
 
 .card-text {
-    width: 40%;
-    font-family: sans-serif;
-    letter-spacing: 1px;
-    color: rgb(109, 109, 109);
+  width: 40%;
+  font-family: sans-serif;
+  letter-spacing: 1px;
+  color: rgb(109, 109, 109);
 }
 
 .card-wrapper {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
 }
 
 .card-wrapper::before {
-    content: '';
-    position: absolute;
-    height: 100px;
-    width: 100px;
-    display: block;
-    border: 1px solid white;
-    opacity: 0;
-    transition: 0.3s;
+  content: '';
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  display: block;
+  border: 1px solid white;
+  opacity: 0;
+  transition: 0.3s;
 }
 
 .card-wrapper h2 {
-    font-size: 40px;
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    margin: 0;
-    transition: 0.3s;
+  font-size: 40px;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  margin: 0;
+  transition: 0.3s;
 }
 
 .card-wrapper p {
-    font-size: 0;
-    visibility: hidden;
-    opacity: 0;
-    font-weight: bold;
-    text-transform: uppercase;
-    transition: 0.3s;
+  font-size: 0;
+  visibility: hidden;
+  opacity: 0;
+  font-weight: bold;
+  text-transform: uppercase;
+  transition: 0.3s;
 }
 
 .card:hover {
-    filter: unset;
+  filter: unset;
 }
 
 .card:hover > .card-wrapper::before {
-    height: 250px;
-    width: 350px;
-    opacity: 1;
+  height: 250px;
+  width: 350px;
+  opacity: 1;
 }
 
 .card:hover > .card-wrapper p {
-    opacity: 1;
-    visibility: visible;
-    font-size: 14px;
+  opacity: 1;
+  visibility: visible;
+  font-size: 14px;
+}
+
+/* FOOTER */
+
+.footer {
+  width: 100%;
+  height: 50px;
+  background-color: #2E1C2B;
+  background: linear-gradient(-45deg, #040505, #1c2e23, #194a2c, #318964);
+  background-size: 400% 400%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: backgroundTransition 5s ease-in-out infinite;
+}
+
+@keyframes backgroundTransition {
+0% {
+    background-position:  0% 75%;
+}
+50% {
+    background-position: 100% 75%;
+}
+100% {
+    background-position: 0% 95%;
+}
 }
