--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,9 @@ body {
     font-family: Principal;
 }
 
-video{
-  display: flex;
-  margin-left: 5px;
+img{
+  width: 100%;
+  height: 35vh;
 }
 
 /* HEADER */
@@ -248,6 +248,15 @@ a:hover {
 }
 
 .card-wrapper {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.card-extra {
   text-align: center;
   display: flex;
   flex-direction: column;
