--- a/css/style.css
+++ b/css/style.css
@@ -49,10 +49,10 @@ h2 {
 }
 
 .window-frame {
-  background-image:url("../img/bgFrame.jpg");
+  background: var(--branco);
   color: var(--preto);
-  padding: 18px;
-  border: var(--preto) solid 4px;
+  padding: 8px;
+  border: var(--cinzaEscuro) solid 2px;
 }
 
 .social-media {
@@ -217,7 +217,7 @@ a:hover {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  border: 3rem 0;
+  padding: 3rem 0;
 }
 
 .card-container {
