--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ img{
 
 .header-wrapper {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   background: linear-gradient(-45deg, #040505, #1c2e23, #194a2c, var(--verdeClaro));
   background-size: 100% 100%;
   display: flex;
