--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
   padding: 0;
   color: var(--branco);
   font-family: Principal;
+  scroll-behavior: smooth;
 }
 
 img{
@@ -26,7 +27,6 @@ img{
 }
 
 /* HEADER */
-
 .header-wrapper {
   height: 100vh;
   width: 100%;
@@ -65,13 +65,13 @@ h2 {
   align-items: center;
   transition: 0.3s cubic-bezier(0.55, 0.025, 0.675, 0.97);
 }
+
 a:hover {
   background-color: var(--branco);
   color: var(--preto);
 }
 
 /* MENU HAMBURGUER */
-
 .checkbox-container {
   display: flex;
   justify-content: center;
@@ -120,7 +120,6 @@ a:hover {
 }
 
 /* MENU */
-
 .menu {
   position: absolute;
   top: 28px;
@@ -167,7 +166,6 @@ a:hover {
 }
 
 /* ANIMAÇÃO DO MENU */
-
 #toggle:checked + .checkbox .trace:nth-child(1) {
   transform: rotate(45deg);
   background-color: #2E1C2B;
@@ -202,7 +200,6 @@ a:hover {
 }
 
 /* CARDS */
-
 .container {
   background-color: var(--preto);
   width: 100%;
@@ -311,8 +308,32 @@ a:hover {
   font-size: 18px;
 }
 
-/* FOOTER */
+/* BACK TO TOP BUTTON */
+.back-to-top-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  width: 45px;
+  height: 45px;
+  background-color: var(--preto);
+  text-decoration: none;
+}
 
+.back-to-top-btn::after {
+  content: "↑";
+  font-size: 32px;
+  font-weight: bold;
+  transition: margin-top 150ms;
+}
+
+.back-to-top-btn:hover::after {
+  margin-top:-4px;
+}
+
+/* FOOTER */
 footer {
   width: 100%;
   height: 50px;
