--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 	font-family: Principal;
 	src:url(../fonts/YanoneKaffeesatz-VariableFont_wght.ttf);
 }
-
+/* Cores Mortas e sem vida sem felicidade sem nada a escuridão reina neste portifolio o vazio do além consumiu este portfolio */
 :root {
 	--preto: #000000;
   --branco: #ffffff;
