--- a/css/style.css
+++ b/css/style.css
@@ -397,12 +397,9 @@ footer {
   width: 100%;
   height: 50px;
   background-color: #2E1C2B;
-  background: linear-gradient(-45deg, #040505, #1c2e23, #194a2c, var(--verdeClaro));
-  background-size: 400% 400%;
   display: flex;
   justify-content: center;
   align-items: center;
-  animation: backgroundTransition 5s ease-in-out infinite;
 }
 
 @keyframes backgroundTransition {
@@ -418,8 +415,10 @@ footer {
 }
 
 .window-frame {
-  background: var(--branco);
-  color: var(--preto);
+  background: linear-gradient(-45deg, #040505, #1c2e23, #194a2c, var(--verdeClaro));
+  background-size: 400% 400%;
+  animation: backgroundTransition 5s ease-in-out infinite;
+  color: var(--branco);
   border-radius: 20px;
   display: flex;
   justify-content: space-evenly;
