--- a/css/style.css
+++ b/css/style.css
@@ -76,10 +76,161 @@ h2 {
   color: var(--preto);
 }
 
+/* Nav Menu Items */
+nav ul li {
+  height: 20%;
+  overflow: hidden;
+}
+
+nav li a {
+  padding: 15px;
+  margin: 10px 0;
+  top: 45%;
+  color: #2E1C2B;
+  letter-spacing: 4px;
+  font-size: 40px;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+nav li a:hover {
+  transform: scale(1.1);
+}
+
+.menu {
+  position: absolute;
+  top: 28px;
+  right: 30px;
+  background: transparent;
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 0px 0px var(--branco);
+  z-index: -1;
+  transition: 400ms ease-in-out 0s;
+}
+
+.menu-slide-right {
+  transition: all 0.4s ease-in-out;
+  transform: translateX(0);
+}
+
+.menu-slide-left {
+  transition: all 0.8s ease-in-out;
+  transform: translateX(-100vw);
+}
+
+.menu-items {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 2;
+  opacity: 0;
+  visibility: hidden;
+  transition: 400ms ease-in-out 0s;
+}
+
+.menu-items ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: stretch;
+  list-style: none;
+}
+
+/* MENU HAMBURGUER */
+.checkbox-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.checkbox {
+  position: absolute;
+  height: 100px;
+  width: 100px;
+  top: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+  z-index: 9999;
+  transition: 400ms ease-in-out 0s;
+}
+
+.checkbox .trace {
+  background-color: var(--branco);
+  width: 50px;
+  height: 6px;
+  position: absolute;
+  border-radius: 2px;
+  transition: 0.5s ease-in-out;
+}
+
+.checkbox .trace:nth-child(1) {
+  top: 36px;
+  transform: rotate(0);
+}
+
+.checkbox .trace:nth-child(2) {
+  top: 51px;
+  transform: rotate(0);
+}
+
+.checkbox .trace:nth-child(3) {
+  top: 66px;
+  transform: rotate(0);
+}
+
+#toggle {
+  display: none;
+}
+
+/* ANIMAÇÃO DO MENU */
+#toggle:checked + .checkbox .trace:nth-child(1) {
+  transform: rotate(45deg);
+  background-color: #2E1C2B;
+  top: 47px;
+}
+
+#toggle:checked + .checkbox .trace:nth-child(2) {
+  transform:  translateX(-100px);
+  width: 30px;
+  visibility: hidden;
+  opacity: 0;
+}
+
+#toggle:checked + .checkbox .trace:nth-child(3) {
+  transform: rotate(-45deg);
+  background-color: #2E1C2B;
+  top: 48px;
+}
+
+#toggle:checked + .checkbox {
+  background-color: #adadad;
+}
+
+#toggle:checked ~ .menu {
+  box-shadow: 0px 0px 0px 100vmax #adadad;
+  z-index: 1;
+}
+
+#toggle:checked ~ .menu-items {
+  visibility: visible;
+  opacity: 1;
+}
+
 /* Scroll Down Button */
 .scroll-down {
   position: absolute;
-  z-index: 10;
   bottom: 40px;
   width: 100%;
   left: 0;
@@ -132,134 +283,6 @@ h2 {
     top: 21px;
     opacity: 0;
   }
-}
-
-/* MENU HAMBURGUER */
-.checkbox-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.checkbox {
-  position: absolute;
-  height: 100px;
-  width: 100px;
-  top: 0;
-  right: 0;
-  display: flex;
-  justify-content: center;
-  cursor: pointer;
-  z-index: 9999;
-  transition: 400ms ease-in-out 0s;
-}
-
-.checkbox .trace {
-  background-color: var(--branco);
-  width: 50px;
-  height: 6px;
-  position: absolute;
-  border-radius: 2px;
-  transition: 0.5s ease-in-out;
-}
-
-.checkbox .trace:nth-child(1) {
-  top: 36px;
-  transform: rotate(0);
-}
-
-.checkbox .trace:nth-child(2) {
-  top: 51px;
-  transform: rotate(0);
-}
-
-.checkbox .trace:nth-child(3) {
-  top: 66px;
-  transform: rotate(0);
-}
-
-#toggle {
-  display: none;
-}
-
-/* MENU */
-.menu {
-  position: absolute;
-  top: 28px;
-  right: 30px;
-  background: transparent;
-  height: 40px;
-  width: 40px;
-  border-radius: 50%;
-  box-shadow: 0px 0px 0px 0px var(--branco);
-  z-index: -1;
-  transition: 400ms ease-in-out 0s;
-}
-
-.menu-items {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 2;
-  opacity: 0;
-  visibility: hidden;
-  transition: 400ms ease-in-out 0s;
-}
-
-.menu-items ul {
-  list-style-type: none;
-}
-
-.menu-items ul li a {
-  margin: 10px 0;
-  color: #2E1C2B;
-  text-decoration: none;
-  text-transform: uppercase;
-  letter-spacing: 4px;
-  font-size: 40px;
-}
-
-.menu-items li {
-  margin: 15px 0;
-}
-
-/* ANIMAÇÃO DO MENU */
-#toggle:checked + .checkbox .trace:nth-child(1) {
-  transform: rotate(45deg);
-  background-color: #2E1C2B;
-  top: 47px;
-}
-
-#toggle:checked + .checkbox .trace:nth-child(2) {
-  transform:  translateX(-100px);
-  width: 30px;
-  visibility: hidden;
-  opacity: 0;
-}
-
-#toggle:checked + .checkbox .trace:nth-child(3) {
-  transform: rotate(-45deg);
-  background-color: #2E1C2B;
-  top: 48px;
-}
-
-#toggle:checked + .checkbox {
-  background-color: #adadad;
-}
-
-#toggle:checked ~ .menu {
-  box-shadow: 0px 0px 0px 100vmax #adadad;
-  z-index: 1;
-}
-
-#toggle:checked ~ .menu-items {
-  visibility: visible;
-  opacity: 1;
 }
 
 /* CARDS */
