--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ nav li a:hover {
   transform: scale(1.1);
 }
 
-.menu {
+.menu-background {
   position: absolute;
   top: 28px;
   right: 30px;
@@ -208,7 +208,7 @@ nav li a:hover {
   background-color: #adadad;
 }
 
-#toggle:checked ~ .menu {
+#toggle:checked ~ .menu-background {
   box-shadow: 0px 0px 0px 100vmax #adadad;
   z-index: 1;
 }
