--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,8 @@
 @media (max-width: 800px) {
+  img {
+    height: 30vh;
+  }
+
   .social-media {
     display: flex;
     flex-direction: column;
@@ -31,6 +35,19 @@
   .card:hover > .card-wrapper::before {
     height: 190px;
     width: 290px;
+  }
+
+  .tab {
+    height: 450px;
+    margin: 14px 0 0 0;
+  }
+
+  .tab a img {
+    width: 300px;
+    right: auto;
+    top: auto;
+    left: calc(50vw - 190px);
+    bottom: 30px;
   }
 
   .window-frame {
