FIX image responsiveness in tab

--- a/css/style.css
+++ b/css/style.css
@@ -327,6 +327,7 @@ nav li a:hover {
   font-family: sans-serif;
   letter-spacing: 1px;
   color: var(--brancoAcizentado);
+  margin: 0 0 3rem 0;
 }
 
 .card-wrapper {
