--- a/css/style.css
+++ b/css/style.css
@@ -302,7 +302,7 @@ nav li a:hover {
 }
 
 .card {
-  height: 40vh;
+  height: 43vh;
   width: 400px;
   margin: 3rem 0 3rem 0;
   display: flex;
@@ -404,12 +404,13 @@ nav li a:hover {
 
 .tab ul {
   margin: 0;
+  padding: 0;
   list-style: none;
 }
 
 .tab li {
   width: fit-content;
-  margin: 2px 0 2px 0;
+  margin: 4px 0 4px 0;
 }
 
 .tab a {
@@ -426,8 +427,8 @@ nav li a:hover {
   border-left: 4px solid var(--verdeClaro);
   opacity: 0;
   position: absolute;
-  right: -420px;
-  top: 0px;
+  right: -450px;
+  top: 10px;
   transition: 200ms;
 }
 
