--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ html {
 body {
   margin: 0;
   padding: 0;
+  background-color: var(--preto);
   color: var(--branco);
   font-family: Principal;
 }
@@ -45,11 +46,13 @@ img {
 }
 
 h1 {
+  color: var(--brancoAcizentado);
   text-transform: uppercase;
   letter-spacing: 4px;
 }
 
 h2 {
+  color: var(--brancoAcizentado);
   text-transform: uppercase;
   letter-spacing: 4px;
 }
@@ -225,6 +228,34 @@ nav li a:hover {
   opacity: 1;
 }
 
+/* Background Toggles */
+.background-toggles {
+  position: absolute;
+  right: 50px;
+  top: 30px;
+  display: flex;
+}
+
+.background-toggles> div:hover {
+  border: 4px solid var(--verdeClaro);
+  height: 20px;
+  width: 20px;
+}
+
+.background-toggles > div {
+  height: 25px;
+  width: 25px;
+  border-radius: 10px;
+  margin-right: 10px;
+  box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+}
+
+.background-1 {
+  background-color: var(--branco);
+  color: var(--preto);
+}
+
 /* Scroll Down Button */
 .scroll-down {
   position: absolute;
@@ -284,7 +315,6 @@ nav li a:hover {
 
 /* CARDS */
 .container {
-  background-color: var(--preto);
   width: 100%;
   height: auto;
   display: flex;
@@ -326,8 +356,7 @@ nav li a:hover {
   width: 40%;
   font-family: sans-serif;
   letter-spacing: 1px;
-  color: var(--brancoAcizentado);
-  margin: 0 0 3rem 0;
+  margin: 3rem 0 3rem 0;
 }
 
 .card-wrapper {
@@ -427,7 +456,7 @@ nav li a:hover {
   border-left: 4px solid var(--verdeClaro);
   opacity: 0;
   position: absolute;
-  right: -450px;
+  right: -460px;
   top: 10px;
   transition: 200ms;
 }
