--- a/css/style.css
+++ b/css/style.css
@@ -353,10 +353,10 @@ nav li a:hover {
 }
 
 .card-text {
-  width: 28.5%;
+  width: 55%;
   font-family: sans-serif;
   letter-spacing: 1px;
-  margin: 3rem 0 3rem 0px;
+  margin: 2rem 0 2rem 0px;
 }
 
 .card-wrapper {
@@ -421,7 +421,7 @@ nav li a:hover {
   background: linear-gradient(89deg, var(--verdeClaro), var(--verdeEscuro));
   color: var(--preto);
   position: relative;
-  margin: 3rem 610px 3rem 0rem;
+  margin: 0rem 0rem 18rem 0rem;
   border-radius: 8px;
   display: flex;
   flex-direction: column;
@@ -456,8 +456,8 @@ nav li a:hover {
   border-left: 4px solid var(--verdeClaro);
   opacity: 0;
   position: absolute;
-  right: -610px;
-  top: 10px;
+  bottom: -100%;
+  left: 0px;
   transition: 200ms;
 }
 
@@ -490,7 +490,6 @@ nav li a:hover {
 footer {
   width: 100%;
   height: 50px;
-  background-color: #2E1C2B;
   display: flex;
   justify-content: center;
   align-items: center;
